<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/input"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:lines="1"
        android:maxLength="4"
        android:maxLines="1"
        android:hint="@string/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/row6"
        android:visibility="invisible"
        android:layout_width="130dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/guessCheck3"
        app:layout_constraintTop_toBottomOf="@+id/row5" />

    <TextView
        android:id="@+id/row5"
        android:visibility="invisible"
        android:layout_width="130dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/guess3"
        app:layout_constraintTop_toBottomOf="@+id/row4" />

    <TextView
        android:id="@+id/row4"
        android:visibility="invisible"
        android:layout_width="130dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/guessCheck2"
        app:layout_constraintTop_toBottomOf="@+id/row3" />

    <TextView
        android:id="@+id/row3"
        android:visibility="invisible"
        android:layout_width="130dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/guess2"
        app:layout_constraintTop_toBottomOf="@+id/row2" />

    <TextView
        android:id="@+id/row2"
        android:visibility="invisible"
        android:layout_width="130dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/guessCheck1"
        app:layout_constraintTop_toBottomOf="@+id/row1" />

    <TextView
        android:id="@+id/row1"
        android:visibility="invisible"
        android:layout_width="130dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guess1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/guessCheck3"
        android:layout_width="216dp"
        android:layout_height="52dp"
        android:visibility="visible"
        android:text="@string/guess_3_check"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess3" />

    <TextView
        android:id="@+id/guess3"
        android:layout_width="216dp"
        android:layout_height="52dp"
        android:visibility="visible"
        android:text="@string/guess_3"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessCheck2" />

    <TextView
        android:id="@+id/guessCheck2"
        android:layout_width="216dp"
        android:layout_height="52dp"
        android:visibility="visible"
        android:text="@string/guess_2_check"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess2" />

    <TextView
        android:id="@+id/guess2"
        android:layout_width="216dp"
        android:layout_height="52dp"
        android:visibility="visible"
        android:text="@string/guess_2"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessCheck1" />

    <TextView
        android:id="@+id/guessCheck1"
        android:layout_width="216dp"
        android:layout_height="52dp"
        android:text="@string/guess_1_check"
        android:textSize="25sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guess1" />

    <TextView
        android:id="@+id/guess1"
        android:layout_width="216dp"
        android:layout_height="52dp"
        android:text="@string/guess_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/guessButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/hiddenAnswer"
        android:visibility="invisible"
        android:layout_width="160dp"
        android:layout_height="63dp"
        android:text="@string/answer"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779" />


</androidx.constraintlayout.widget.ConstraintLayout>